# Tetris

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c  main.old
src/game/: game.c  game.h  gamerunner.c  gamesettings.h  input.c  input.h
src/tetrimino/: gravity.c  gravity.h  movedown.c  movedown.h  moveleft.c  moveleft.h  movement.c  movement.h  moveright.c  moveright.h  rotation.c  rotation.h  tetrimino.h  validation.c  validation.h
src/tetriminos/: gravity.c  gravity.h  movement.c  movement.h  tetrimino.h
src/ui/: colors.h  gameui.c  gameui.h  ui.c  ui.h
tests/: CMakeLists.txt  tests.c
tests/movement/: movedown.c  moveleft.c  movement.c  movement.h  moveright.c
tests/placement/: gameover.c  gameover.h  placement.c  placement.h
tests/playfield/: gameover.c  spawntetrimino.c  spawntetrimino.h
tests/randombag/: randombag.c  randombag.h
tests/rotation/: nowrap.c  rotation.c  rotation.h
tests/tetrimino/: gravity.c  gravity.h  movedown.c  movedown.h  moveleft.c  moveleft.h  moveright.c  moveright.h
tests/unity/: unity_internals.h
tests/utilities/: utilities.c  utilities.h
